--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 7
+<h2 class="ui orange header m-inline-block m-text-thin"> 10
 	</h2>
 </div>
 </div>
@@ -55,7 +55,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.714 s</p>
+<p class="m-text">1.001 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -68,20 +68,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.772 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">tv</h3>
-<a href="http://www.sci-hub.tv" target="_blank">
-<p class="m-text">sci-hub.tv</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.005 s</p>
+<p class="m-text">1.030 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -94,7 +81,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.014 s</p>
+<p class="m-text">1.030 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -107,7 +94,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.016 s</p>
+<p class="m-text">1.041 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -120,7 +107,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.141 s</p>
+<p class="m-text">1.277 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -133,7 +120,59 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.514 s</p>
+<p class="m-text">1.549 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">is</h3>
+<a href="http://www.sci-hub.is" target="_blank">
+<p class="m-text">sci-hub.is</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.249 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nz</h3>
+<a href="http://www.sci-hub.nz" target="_blank">
+<p class="m-text">sci-hub.nz</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.252 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.297 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tv</h3>
+<a href="http://www.sci-hub.tv" target="_blank">
+<p class="m-text">sci-hub.tv</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.533 s</p>
 </div>
 </div>
 </div></div>
@@ -147,7 +186,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 03:59:10 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 04:04:22 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
