--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 10
+<h2 class="ui orange header m-inline-block m-text-thin"> 15
 	</h2>
 </div>
 </div>
@@ -46,6 +46,84 @@ var _hmt = _hmt || [];
 
 <div class="ui attached segment">
 <div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.000 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.012 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.038 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.042 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">16.312 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">la</h3>
+<a href="http://www.sci-hub.la" target="_blank">
+<p class="m-text">sci-hub.la</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.323 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
 <h3 class="ui header">gq</h3>
@@ -61,6 +139,19 @@ var _hmt = _hmt || [];
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
+<h3 class="ui header">name</h3>
+<a href="http://www.sci-hub.name" target="_blank">
+<p class="m-text">sci-hub.name</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.592 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
 <h3 class="ui header">ga</h3>
 <a href="http://www.sci-hub.ga" target="_blank">
 <p class="m-text">sci-hub.ga</p>
@@ -68,33 +159,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.649 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://www.sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.939 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">is</h3>
-<a href="http://www.sci-hub.is" target="_blank">
-<p class="m-text">sci-hub.is</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.984 s</p>
+<p class="m-text">0.604 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -107,7 +172,20 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.010 s</p>
+<p class="m-text">1.014 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">is</h3>
+<a href="http://www.sci-hub.is" target="_blank">
+<p class="m-text">sci-hub.is</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.118 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -120,20 +198,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.014 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">name</h3>
-<a href="http://www.sci-hub.name" target="_blank">
-<p class="m-text">sci-hub.name</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.045 s</p>
+<p class="m-text">1.137 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -146,20 +211,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.501 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">la</h3>
-<a href="http://www.sci-hub.la" target="_blank">
-<p class="m-text">sci-hub.la</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.505 s</p>
+<p class="m-text">1.518 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -172,7 +224,20 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.530 s</p>
+<p class="m-text">9.619 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">62.201 s</p>
 </div>
 </div>
 </div></div>
@@ -186,7 +251,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 15:54:13 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 15:56:22 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
