--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 10
+<h2 class="ui orange header m-inline-block m-text-thin"> 37
 	</h2>
 </div>
 </div>
@@ -48,40 +48,352 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">la</h3>
-<a href="http://www.sci-hub.la" target="_blank">
-<p class="m-text">sci-hub.la</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text"> s</p>
+<p class="m-text">0.334 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">name</h3>
-<a href="http://www.sci-hub.name" target="_blank">
-<p class="m-text">sci-hub.name</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text"> s</p>
+<p class="m-text">0.523 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://www.sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text"> s</p>
+<p class="m-text">0.585 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.590 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.606 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.744 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.014 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.014 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.018 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.022 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.031 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.231 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.254 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.268 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.364 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.497 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.521 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.535 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.546 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">236.085 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.508 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.518 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">3.520 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.693 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.693 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.697 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.698 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -94,72 +406,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text"> s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">tv</h3>
-<a href="http://www.sci-hub.tv" target="_blank">
-<p class="m-text">sci-hub.tv</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text"> s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">tw</h3>
-<a href="http://www.sci-hub.tw" target="_blank">
-<p class="m-text">sci-hub.tw</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text"> s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">cn</h3>
-<a href="http://www.sci-hub.cn" target="_blank">
-<p class="m-text">sci-hub.cn</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.760 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">is</h3>
-<a href="http://www.sci-hub.is" target="_blank">
-<p class="m-text">sci-hub.is</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.016 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">gq</h3>
-<a href="http://www.sci-hub.gq" target="_blank">
-<p class="m-text">sci-hub.gq</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.023 s</p>
+<p class="m-text">0.323 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -172,7 +419,111 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.536 s</p>
+<p class="m-text">0.345 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">gq</h3>
+<a href="http://www.sci-hub.gq" target="_blank">
+<p class="m-text">sci-hub.gq</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.578 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">la</h3>
+<a href="http://www.sci-hub.la" target="_blank">
+<p class="m-text">sci-hub.la</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.578 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">name</h3>
+<a href="http://www.sci-hub.name" target="_blank">
+<p class="m-text">sci-hub.name</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.591 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tv</h3>
+<a href="http://www.sci-hub.tv" target="_blank">
+<p class="m-text">sci-hub.tv</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.602 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">is</h3>
+<a href="http://www.sci-hub.is" target="_blank">
+<p class="m-text">sci-hub.is</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.001 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.012 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">cn</h3>
+<a href="http://www.sci-hub.cn" target="_blank">
+<p class="m-text">sci-hub.cn</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.025 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tw</h3>
+<a href="http://www.sci-hub.tw" target="_blank">
+<p class="m-text">sci-hub.tw</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">63.201 s</p>
 </div>
 </div>
 </div></div>
@@ -186,7 +537,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 15:56:27 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:01:11 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
