--- a/index.html
+++ b/index.html
@@ -38,14 +38,222 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 0
+<h2 class="ui orange header m-inline-block m-text-thin"> 16
 	</h2>
 </div>
 </div>
 </div>
 
 <div class="ui attached segment">
+<div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
 </div>
+
+<div class="five wide column">
+<p class="m-text">1.005 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.012 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.013 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.016 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.195 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">16.353 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ga</h3>
+<a href="http://www.sci-hub.ga" target="_blank">
+<p class="m-text">sci-hub.ga</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.340 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">la</h3>
+<a href="http://www.sci-hub.la" target="_blank">
+<p class="m-text">sci-hub.la</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.591 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">name</h3>
+<a href="http://www.sci-hub.name" target="_blank">
+<p class="m-text">sci-hub.name</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.602 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">gq</h3>
+<a href="http://www.sci-hub.gq" target="_blank">
+<p class="m-text">sci-hub.gq</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.617 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tv</h3>
+<a href="http://www.sci-hub.tv" target="_blank">
+<p class="m-text">sci-hub.tv</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.007 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">cn</h3>
+<a href="http://www.sci-hub.cn" target="_blank">
+<p class="m-text">sci-hub.cn</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.016 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">is</h3>
+<a href="http://www.sci-hub.is" target="_blank">
+<p class="m-text">sci-hub.is</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.134 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nz</h3>
+<a href="http://www.sci-hub.nz" target="_blank">
+<p class="m-text">sci-hub.nz</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.509 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tw</h3>
+<a href="http://www.sci-hub.tw" target="_blank">
+<p class="m-text">sci-hub.tw</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">3.983 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">69.665 s</p>
+</div>
+</div>
+</div></div>
 </div>
 </div>
 </div>
@@ -56,7 +264,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:07:16 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:09:24 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
