--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 10
+<h2 class="ui orange header m-inline-block m-text-thin"> 19
 	</h2>
 </div>
 </div>
@@ -48,79 +48,118 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">ga</h3>
-<a href="http://www.sci-hub.ga" target="_blank">
-<p class="m-text">sci-hub.ga</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.627 s</p>
+<p class="m-text">0.756 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">gq</h3>
-<a href="http://www.sci-hub.gq" target="_blank">
-<p class="m-text">sci-hub.gq</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.667 s</p>
+<p class="m-text">0.998 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">nz</h3>
-<a href="http://www.sci-hub.nz" target="_blank">
-<p class="m-text">sci-hub.nz</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.789 s</p>
+<p class="m-text">1.003 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://www.sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.965 s</p>
+<p class="m-text">1.008 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">tv</h3>
-<a href="http://www.sci-hub.tv" target="_blank">
-<p class="m-text">sci-hub.tv</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.014 s</p>
+<p class="m-text">1.012 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">la</h3>
-<a href="http://www.sci-hub.la" target="_blank">
-<p class="m-text">sci-hub.la</p>
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
 </a>
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.068 s</p>
+<p class="m-text">1.017 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.238 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.255 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.863 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -133,7 +172,72 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.070 s</p>
+<p class="m-text">0.590 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">gq</h3>
+<a href="http://www.sci-hub.gq" target="_blank">
+<p class="m-text">sci-hub.gq</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.603 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">la</h3>
+<a href="http://www.sci-hub.la" target="_blank">
+<p class="m-text">sci-hub.la</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.609 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ga</h3>
+<a href="http://www.sci-hub.ga" target="_blank">
+<p class="m-text">sci-hub.ga</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.621 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nz</h3>
+<a href="http://www.sci-hub.nz" target="_blank">
+<p class="m-text">sci-hub.nz</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.775 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tv</h3>
+<a href="http://www.sci-hub.tv" target="_blank">
+<p class="m-text">sci-hub.tv</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.999 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -146,7 +250,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.202 s</p>
+<p class="m-text">1.019 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -159,7 +263,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.518 s</p>
+<p class="m-text">1.133 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -172,7 +276,20 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.569 s</p>
+<p class="m-text">1.508 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.692 s</p>
 </div>
 </div>
 </div></div>
@@ -186,7 +303,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:11:14 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:13:13 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
